Make login/register pages use the new alert system

--- a/static/less/pages/login.less
+++ b/static/less/pages/login.less
@@ -25,6 +25,10 @@
         form {
             .status {
                 .ionisx-alert();
+
+                &.submission-error {
+                    .ionisx-alert-error();
+                }
             }
 
             .list-input {
