Remove padding and letter spacing from header dropdrown

--- a/static/less/global/header.less
+++ b/static/less/global/header.less
@@ -144,6 +144,8 @@ header.global, header.global.slim {
                         border: 0 none;
                         outline: none;
                         color: @gg-blue;
+                        padding: 0;
+                        letter-spacing: normal;
 
                         &:hover, &:focus {
                             background: none;
