--- a/static/less/pages/course/main.less
+++ b/static/less/pages/course/main.less
@@ -45,6 +45,24 @@
                         background-color: @gg-blue;
                         color: @white;
                     }
+
+                    &.new-post-btn {
+                        .ionisx-btn(@white, @gg-alt-blue);
+
+                        font-size: 0.9em;
+
+                        span.icon {
+                            .square(auto);
+
+                            font: inherit;
+                            font-family: 'FontAwesome';
+                            color: inherit;
+                            display: inline;
+                            float: none;
+                            margin: 0;
+                            padding: 0 0.5em 0 0;
+                        }
+                    }
                 }
             }
         }
