--- a/static/less/pages/course/xblock.less
+++ b/static/less/pages/course/xblock.less
@@ -145,7 +145,7 @@
         }
 
         .new-post-btn {
-            .ionisx-btn(@white, @gg-blue);
+            .ionisx-btn(@white, @gg-alt-blue);
 
             font-size: 0.9em;
 
