Fix video player position

--- a/static/less/pages/course/xblock.less
+++ b/static/less/pages/course/xblock.less
@@ -50,7 +50,7 @@
 
                     position: absolute;
                     left: 0;
-                    top: 0;
+                    top: 0 !important;
                 }
             }
         }
