Change logo to IONISx

--- a/static/less/global/footer.less
+++ b/static/less/global/footer.less
@@ -2,6 +2,7 @@
     border: 0 none;
     box-shadow: none;
     background-color: @gg-blue;
+    font-size: 0.9em;
 
     > footer {
         .ionisx-container();
