--- a/static/less/pages/course/about.less
+++ b/static/less/pages/course/about.less
@@ -121,6 +121,11 @@ section.course-info {
                         padding: 0 0 0 20px;
                         border-left: 1px solid @gg-border-grey;
 
+                        > span.register.disabled {
+                            .ionisx-btn-disabled();
+                            .size(100%, auto);
+                        }
+
                         a {
                             display: block;
                             margin: 0;
@@ -211,6 +216,10 @@ section.course-info {
                 margin: 0 0 30px 0;
 
                 &.about {
+                    p.alert {
+                        .ionisx-alert();
+                        .ionisx-alert-error();
+                    }
                 }
 
                 &.planning {
