Hide personal information sections in register page

--- a/static/less/pages/register.less
+++ b/static/less/pages/register.less
@@ -68,6 +68,11 @@
                 .ionisx-input();
             }
 
+            .group-form-personalinformation,
+            .group-form-personalinformation2 {
+                display: none;
+            }
+
             .group-form-accountacknowledgements {
                 position: relative;
             }
