Fix margins in dashboard in tablet mode

--- a/static/less/pages/dashboard.less
+++ b/static/less/pages/dashboard.less
@@ -142,7 +142,7 @@
                     vertical-align: top;
 
                     &:nth-child(even) {
-                        margin: 0;
+                        margin-right: 0;
                     }
                 }
 
