Remove star from load more button

--- a/static/less/pages/course/forum.less
+++ b/static/less/pages/course/forum.less
@@ -217,6 +217,13 @@
                             }
                         }
 
+                        &.more-page {
+                            a:before {
+                                content: none;
+                                display: none;
+                            }
+                        }
+
                         &:last-child {
                             a {
                                 border: 0 none;
