Remove min-height from discussion column

--- a/static/less/pages/course/forum.less
+++ b/static/less/pages/course/forum.less
@@ -239,6 +239,7 @@
             border-radius: @default-border-radius;
             box-shadow: none;
             background: none;
+            min-height: 0;
             background-color: @white;
             display: block;
 
