Remove padding from forum responses

--- a/static/less/pages/course/forum.less
+++ b/static/less/pages/course/forum.less
@@ -431,7 +431,7 @@
                         border: 1px solid @gg-border-grey;
                         border-radius: @default-border-radius;
                         transition: none;
-                        padding: 1em;
+                        padding: 0;
 
                         &:last-child {
                             margin: 0;
@@ -513,7 +513,7 @@
                                 .comment-form {
                                     background: none;
                                     background-color: @gg-grey;
-                                    padding: 1em 0.5em;
+                                    padding: 1em;
                                     border-top: 1px solid @gg-border-grey;
                                 }
                             }
